--- a/Models/shadow.ac
+++ b/Models/shadow.ac
@@ -1,26 +1,26 @@
 AC3Db
 MATERIAL "DefaultWhite" rgb 1 1 1  amb 1 1 1  emis 0 0 0  spec 0.5 0.5 0.5  shi 64  trans 0
-MATERIAL "DefaultWhite" rgb 1 1 1 amb 1 1 1 emis 0 0 0 spec 0.5 0.5 0.5 shi 64 trans 0
 OBJECT world
 kids 1
 OBJECT poly
 name "shadow"
+loc 0 0 -0
 data 6
 shadow
 texture "shadow.png"
-texrep 1 1
-crease 30.000000
+texrep 1.000000 1.000000
+crease 180.000005
 numvert 4
-3.839756 -1.068181 -4.289549
-3.839756 -1.068181 4.289551
--3.961327 -1.068181 4.28955
--3.961326 -1.068181 -4.289551
+3.845 0 -4.304998
+3.845 0 4.304999
+-3.845 0 4.304998
+-3.844999 0 -4.305
 numsurf 1
 SURF 0x00
-mat 1
+mat 0
 refs 4
-0 1.0 0.999999642372
-3 2.98957445466e-07 1.0
-2 0.0 2.35184771213e-07
-1 0.999999940395 0.0
+0 1 0.999999701977
+3 0.000000086102 1
+2 0 0.000000175537
+1 1 0
 kids 0
